# fuzzy_shield

./: README.md
client/: .env  .eslintrc.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
client/src/: App.vue  components.d.ts
client/src/components/: AppFooter.vue  MemorySizeChip.vue  RecentTasks.vue  ScoreProgress.vue  TaskCard.vue  TaskForm.vue  TaskResultGrid.vue  TimeChip.vue
client/src/composables/: algorithms.ts  taskStatus.ts
client/src/interfaces/: task.d.ts
client/src/pages/: index.vue
client/src/plugins/: vuetify.ts
client/src/services/: api.ts  collections.ts  tasks.ts
client/src/stores/: app.ts  collections.ts  socket.ts  taskForm.ts  tasks.ts
fuzzy_shield/: .gitignore  pyproject.toml
fuzzy_shield/fuzzy_shield/: main.py
fuzzy_shield_client/: .env  package.json  vite.config.mts
fuzzy_shield_client/src/components/: AppFooter.vue
server/: .gitignore  pyproject.toml
server/fuzzy_shield/: __init__.py  config.py  main.py  task.py
server/fuzzy_shield/data/: __init__.py  metric_test.py  prepare.py  stats.py
server/fuzzy_shield/dependencies/: __init__.py  redis.py
server/fuzzy_shield/routers/: __init__.py  collections.py  tasks.py
server/fuzzy_shield/services/: __init__.py  queues.py  status_updater.py
server/fuzzy_shield/services/scorer/: __init__.py  decorator.py  hamming.py  levenshtein_ratio.py  levenshtein_sort.py  naive.py
