[tool.poetry]
name = "fuzzy-shield"
version = "0.1.0"
description = ""
authors = ["Abdulhamid <zoubi.abdulhamid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
thefuzz = "^0.22.1"
redis = "^5.0.4"
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.poetry.scripts]
start = "src:main"
