[tool.poetry]
name = "fuzzy-shield"
version = "0.1.0"
description = ""
authors = ["Abdulhamid <zoubi.abdulhamid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
thefuzz = "^0.22.1"
websockets = "^12.0"

pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
pandas = "^2.2.2"
redis = "^5.0.4"
psutil = "^5.9.8"
openpyxl = "^3.1.4"
xlrd = "^2.0.1"
xlwt = "^1.3.0"
xlsxwriter = "^3.2.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.poetry.scripts]
start = "src:main"
